[gd_scene load_steps=20 format=2]

[ext_resource path="res://Asset/tetris.png" type="Texture" id=1]
[ext_resource path="res://Script/PlayWindow.gd" type="Script" id=2]
[ext_resource path="res://Asset/goals_bg.png" type="Texture" id=3]
[ext_resource path="res://Asset/line.mp3" type="AudioStream" id=4]
[ext_resource path="res://Asset/bg.mp3" type="AudioStream" id=5]

[sub_resource type="TileSet" id=1]
0/name = "tetris.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 320, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=3]
0/name = "tetris.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tetris.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tetris.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tetris.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tetris.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 256, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tetris.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 320, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 2 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "tetris.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Asset/Kenney Rocket Square.ttf"

[sub_resource type="DynamicFont" id=6]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Asset/Kenney Rocket Square.ttf"

[sub_resource type="DynamicFont" id=8]
size = 150
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Asset/Kenney Rocket Square.ttf"

[sub_resource type="DynamicFont" id=10]
size = 30
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Asset/Kenney Rocket Square.ttf"

[sub_resource type="DynamicFont" id=12]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Asset/Kenney Rocket Square.ttf"

[sub_resource type="DynamicFont" id=14]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 13 )

[node name="PlayWindow" type="Node2D"]
script = ExtResource( 2 )

[node name="wall" type="TileMap" parent="."]
tile_set = SubResource( 1 )
collision_layer = 2
collision_mask = 3
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 65536, 0, 0, 65547, 0, 0, 131072, 0, 0, 131083, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196619, 0, 0, 196622, 0, 0, 196627, 0, 0, 262144, 0, 0, 262155, 0, 0, 262158, 0, 0, 262163, 0, 0, 327680, 0, 0, 327691, 0, 0, 327694, 0, 0, 327699, 0, 0, 393216, 0, 0, 393227, 0, 0, 393230, 0, 0, 393235, 0, 0, 458752, 0, 0, 458763, 0, 0, 458766, 0, 0, 458771, 0, 0, 524288, 0, 0, 524299, 0, 0, 524302, 0, 0, 524307, 0, 0, 589824, 0, 0, 589835, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655371, 0, 0, 720896, 0, 0, 720907, 0, 0, 786432, 0, 0, 786443, 0, 0, 851968, 0, 0, 851979, 0, 0, 917504, 0, 0, 917515, 0, 0, 983040, 0, 0, 983051, 0, 0, 1048576, 0, 0, 1048587, 0, 0, 1114112, 0, 0, 1114123, 0, 0, 1179648, 0, 0, 1179659, 0, 0, 1245184, 0, 0, 1245195, 0, 0, 1310720, 0, 0, 1310731, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
collision_mask = 3
format = 1

[node name="FormLine" type="TileMap" parent="."]
tile_set = SubResource( 4 )
format = 1

[node name="Label" type="Label" parent="."]
margin_left = 952.693
margin_top = 719.055
margin_right = 1304.69
margin_bottom = 844.055
rect_pivot_offset = Vector2( 176.744, 162.999 )
custom_fonts/font = SubResource( 6 )
text = "TIME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
margin_left = 951.347
margin_top = 782.978
margin_right = 1251.35
margin_bottom = 970.978
rect_pivot_offset = Vector2( 178.09, 78.1 )
custom_fonts/font = SubResource( 8 )
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 901.06
margin_top = 1044.57
margin_right = 1301.06
margin_bottom = 1169.57
rect_pivot_offset = Vector2( 176.744, 162.999 )
custom_fonts/font = SubResource( 6 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 948.351
margin_top = 1117.5
margin_right = 1248.35
margin_bottom = 1305.5
rect_pivot_offset = Vector2( 178.09, 78.1 )
custom_fonts/font = SubResource( 8 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="GameOver" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameOver"]
margin_left = 139.691
margin_top = 450.822
margin_right = 633.691
margin_bottom = 944.822
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameOver"]
margin_left = 307.238
margin_top = 659.999
margin_right = 457.238
margin_bottom = 697.999
rect_pivot_offset = Vector2( -227.473, 306.02 )
custom_fonts/font = SubResource( 10 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="GameOver"]
margin_left = 219.723
margin_top = 557.457
margin_right = 558.723
margin_bottom = 620.457
rect_pivot_offset = Vector2( -227.473, 306.02 )
custom_fonts/font = SubResource( 12 )
text = "TIME UP !!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScore" type="Label" parent="GameOver"]
margin_left = 343.359
margin_top = 712.766
margin_right = 423.359
margin_bottom = 812.766
rect_scale = Vector2( 1.02408, 1 )
custom_fonts/font = SubResource( 14 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="line" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 24.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
